--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,9 @@
         <TextView android:id="@+id/playerTurn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="X Turn"
-            android:layout_gravity="center" >
+            android:text="@string/x_turn"
+            android:layout_gravity="center"
+            android:layout_margin="10dp">
         </TextView>
         <LinearLayout
             android:layout_width="match_parent"
