--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/x_turn"
-            android:layout_gravity="center"
+            android:gravity="center"
             android:layout_margin="10dp">
         </TextView>
         <LinearLayout
