--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        tools:text="Hello World!"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,7 +25,7 @@
         <TextView android:id="@+id/playerTurn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/x_turn"
+            tools:text="@string/x_turn"
             android:gravity="center"
             android:layout_margin="10dp">
         </TextView>
