--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,5 +10,8 @@
         <item name="android:layout_marginVertical">
             10dp
         </item>
+        <item name="android:background">
+            @drawable/box_shape
+        </item>
     </style>
 </resources>
