Refactor game turn text ID

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title"
         app:layout_constraintBottom_toBottomOf="parent">
-        <TextView android:id="@+id/playerTurn"
+        <TextView android:id="@+id/gameProgress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="@string/x_turn"
